# gif-escarbot

./: .env.example  Config.py  Forwarder.py  README.md  Replacer.py  main.py  pyproject.toml  requirements.txt  send.py
escarbot/: __main__.py  forward.py  inline.py  replace.py
