[tool.poetry]
name = "gif-escarbot"
version = "0.1.0"
description = "A gif-forwarding robot for Earthbound Café (https://linktr.ee/earthboundcafe)"
authors = ["Andronaco Marco <marco.andronaco@olivetti.com>"]
readme = "README.md"
packages = [{include = "gif_escarbot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
python-telegram-bot = "20.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
