[tool.poetry]
name = "escarbot"
version = "0.1.0"
description = "Earthbound Café's custom delivery bot with other cool utilities built-in."
authors = ["Andronaco Marco <marco.andronaco@olivetti.com>"]
readme = "README.md"
packages = [{include = "escarbot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
python-telegram-bot = "20.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
